--- a/EYAK(rev2)/app/src/main/res/layout/family_tab_main.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/family_tab_main.xml
@@ -25,14 +25,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="11"
-                android:gravity="center"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:fontFamily="@font/tmoney_bold"
+                    android:gravity="center"
                     android:text="가족 전체 정보"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textColor="#757863"
