--- a/EYAK(rev2)/app/src/main/res/layout/fragment_today_condition.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/fragment_today_condition.xml
@@ -19,6 +19,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/textView34"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:fontFamily="@font/tmoney_bold"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                android:text="오늘 하루 어떠셨나요??"
+                android:textColor="#757863"
+                android:textSize="30sp" />
+
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="10dp" />
