--- a/EYAK(rev2)/app/src/main/res/layout/fragment_medicin_add.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/fragment_medicin_add.xml
@@ -340,20 +340,88 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:orientation="horizontal"
-                            android:weightSum="12">
+                            android:orientation="horizontal"></LinearLayout>
+                    </HorizontalScrollView>
+
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:id="@+id/imageView16"
+                                android:layout_width="100dp"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/ic_pill_glacier" />
+
+                            <Space
+                                android:layout_width="20dp"
+                                android:layout_height="match_parent" />
+
+                            <ImageView
+                                android:id="@+id/imageView18"
+                                android:layout_width="100dp"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/ic_pill_afterglow" />
+
+                            <Space
+                                android:layout_width="20dp"
+                                android:layout_height="match_parent" />
 
                             <ImageView
                                 android:id="@+id/imageView2"
-                                android:layout_width="0dp"
+                                android:layout_width="100dp"
                                 android:layout_height="match_parent"
-                                android:layout_weight="2"
-                                android:src="@drawable/ic_pill" />
+                                android:src="@drawable/ic_pill_bougainvaillea" />
 
                             <Space
-                                android:layout_width="0dp"
+                                android:layout_width="20dp"
+                                android:layout_height="match_parent" />
+
+                            <ImageView
+                                android:id="@+id/imageView19"
+                                android:layout_width="100dp"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/ic_pill_orchidice" />
+
+                            <Space
+                                android:layout_width="20dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1" />
+
+                            <ImageView
+                                android:id="@+id/imageView20"
+                                android:layout_width="100dp"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/ic_pill_silver" />
+
+                            <Space
+                                android:layout_width="20dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1" />
+
+                            <ImageView
+                                android:id="@+id/imageView21"
+                                android:layout_width="100dp"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/ic_pill_pinklady" />
+
+                            <Space
+                                android:layout_width="20dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1" />
+
+                            <ImageView
+                                android:id="@+id/imageView8"
+                                android:layout_width="100dp"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/ic_pill_fusioncoral" />
+
                         </LinearLayout>
                     </HorizontalScrollView>
                 </LinearLayout>
