자동 로그인 성공

--- a/EYAK(rev2)/app/src/main/res/layout/medicine_tab_main.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/medicine_tab_main.xml
@@ -55,7 +55,7 @@
             android:weightSum="45">
 
             <ImageView
-                android:id="@+id/medicinDetailCalender"
+                android:id="@+id/medicineDetailCalendar"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
@@ -68,7 +68,7 @@
                 android:layout_weight="5" />
 
             <ImageView
-                android:id="@+id/medicinDetailPrint"
+                android:id="@+id/medicineDetailPrint"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
