--- a/EYAK(rev2)/app/src/main/res/layout/fragment_medicin_add.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/fragment_medicin_add.xml
@@ -1082,7 +1082,7 @@
                     android:layout_weight="2" />
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/resultBtn"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="6"
