--- a/EYAK(rev2)/app/src/main/res/layout/medicine_tab_main.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/medicine_tab_main.xml
@@ -43,7 +43,8 @@
                 android:id="@+id/medicineListView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="89" />
+                android:layout_weight="89"
+                android:divider="#FFFFFF" />
 
         </LinearLayout>
 
